# UniOpt.py

./: .editorconfig  .gitignore  .gitlab-ci.yml  .travis.yml  Code_Of_Conduct.md  Contributing.md  Doxyfile  ReadMe.md  funcs.py  logo.py  pyproject.toml
.ci/: installBackendsDependencies.sh  installCython.sh  installGPyOptDependencies.sh  installRBFOptDependencies.sh  installSMAC3Dependencies.sh  pythonStdlibFixes.sh
UniOpt/: __init__.py  __main__.py  imports.py
UniOpt/backends/: BayTune.py  ConfigSpaceSpec.py  EvoFuzzy.py  EvoStra.py  GPyOpt.py  RoBO.py  SMAC.py  SOpt.py  bayesian.py  ecabc.py  hyperband.py  hyperengine.py  hyperopt.py  optunity.py  pySOT.py  pyshac.py  rbfopt.py  simple_spearmint.py  sklearn.py  skopt.py  yabox.py  ypde.py
UniOpt/core/: ArraySpec.py  HyperparamVector.py  MetaMap.py  MetaSpec.py  Optimizer.py  PointsStorage.py  ProgressReporter.py  Spec.py  SpecNoCategories.py  SpecNoIntegers.py  SpecNoScalars.py  SpecOnlyBoxes.py  __init__.py
UniOpt/utils/: __init__.py  coresCount.py
tests/: tests.py
